@@ -7,6 +7,7 @@ Version 3.4.1.x (2011-03-xx)
 	Fixed bug where image border color/style values were overwritten by advimage plugin.
 	Fixed bug where setting border in advimage plugin would throw error in IE.
 	Fixed bug where the context menu wouldn't select images on WebKit browsers.
+	Fixed bug where paste plugin wouldn't properly extract the contents on WebKit due to recent changes in browser behavior.
 	Rewrote the fullpage plugin to handle style contents better and have a more normalized behavior across browsers.
 Version 3.4.1 (2011-03-24)
 	Added significantly improved list handling via the new 'lists' plugin.
